--- a/itcaststore/WebContent/WEB-INF/web.xml
+++ b/itcaststore/WebContent/WEB-INF/web.xml
@@ -421,13 +421,51 @@
     <url-pattern>/EnterMsgboard</url-pattern>
   </filter-mapping>
   <servlet>
-    <description></description>
-    <display-name>EnterMsgboard</display-name>
     <servlet-name>EnterMsgboard</servlet-name>
     <servlet-class>cn.itcast.itcaststore.web.servlet.client.EnterMsgboard</servlet-class>
   </servlet>
   <servlet-mapping>
     <servlet-name>EnterMsgboard</servlet-name>
     <url-pattern>/EnterMsgboard</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <description></description>
+    <display-name>FindScoreByUser</display-name>
+    <servlet-name>FindScoreByUser</servlet-name>
+    <servlet-class>cn.itcast.itcaststore.web.servlet.client.FindScoreByUser</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>FindScoreByUser</servlet-name>
+    <url-pattern>/FindScoreByUser</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <description></description>
+    <display-name>ChangeUserInfoServlet</display-name>
+    <servlet-name>ChangeUserInfoServlet</servlet-name>
+    <servlet-class>cn.itcast.itcaststore.web.servlet.client.ChangeUserInfoServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>ChangeUserInfoServlet</servlet-name>
+    <url-pattern>/ChangeUserInfoServlet</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <description></description>
+    <display-name>IsCorrectUserInfoServlet</display-name>
+    <servlet-name>IsCorrectUserInfoServlet</servlet-name>
+    <servlet-class>cn.itcast.itcaststore.web.servlet.client.IsCorrectUserInfoServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>IsCorrectUserInfoServlet</servlet-name>
+    <url-pattern>/IsCorrectUserInfoServlet</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <description></description>
+    <display-name>CleanCarServlet</display-name>
+    <servlet-name>CleanCarServlet</servlet-name>
+    <servlet-class>cn.itcast.itcaststore.web.servlet.client.CleanCarServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>CleanCarServlet</servlet-name>
+    <url-pattern>/CleanCarServlet</url-pattern>
   </servlet-mapping>
 </web-app>
